minor tweak to profile component. fixes text not cascading on smallest breakpoint

--- a/client/src/app/pages/profile/profile.component.scss
+++ b/client/src/app/pages/profile/profile.component.scss
@@ -20,7 +20,7 @@
       width: 100%;
 
       th {
-        background-color: $gray-lightest;
+        background-color: $gray-lighter;
         border: 0;
         font-weight: normal;
       }
